--- a/media-player/mymediaplayer.html
+++ b/media-player/mymediaplayer.html
@@ -6,8 +6,7 @@
   <title>My Media Player</title>
 </head>
   <body>
-  <video width="640" height="360" controls="controls">
-    <source src="powerofteamwork.mp4" type="video/mp4" />
+  <video width="640" height="360" src="powerofteamwork.mp4" type="video/mp4" controls="controls">
     <track kind="subtitles" label="English" src="subtitle_eng.vtt" default></track>
   </video>
 
