--- a/media-player/mymediaplayer.html
+++ b/media-player/mymediaplayer.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Media Player</title>
 </head>
-  <body>
-  <video width="640" height="360" src="powerofteamwork.mp4" type="video/mp4" controls="controls">
+<body>
+  <video src="powerofteamwork.mp4" type="video/mp4" controls="controls">
     <track kind="subtitles" label="English" src="subtitle_eng.vtt" default></track>
   </video>
-
 </body>
 </html>
