--- a/media-player/mymediaplayer.html
+++ b/media-player/mymediaplayer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <video preload="none" controls>
-    <track kind="subtitles" label="English" src="subtitle_eng.vtt" default></track>
+    <track kind="subtitles" label="English" src="power-of-teamwork/subtitle_eng.vtt" default></track>
   </video>
 </body>
 <script type="text/javascript">
@@ -39,7 +39,7 @@
   }
 
   function getAwesomePlaylist() {
-    const BASE_URL = 'https://storage.googleapis.com/media-session/';
+    const BASE_URL = 'https://lgewst.github.io/media-player/';
 
     return [{
         src: BASE_URL + 'power-of-teamwork/trailer.mp4',
