--- a/media-player/mymediaplayer.html
+++ b/media-player/mymediaplayer.html
@@ -50,7 +50,7 @@
           { src: BASE_URL + 'power-of-teamwork/artwork-192.jpg', sizes: '192x192', type: 'image/jpg' }
         ]
       }, {
-        src: BASE_URL + 'big-buck-bunny/trailer.mov',
+        src: 'https://storage.googleapis.com/media-session/big-buck-bunny/trailer.mov',
         title: 'Big Buck Bunny',
         artist: 'Blender Foundation',
         artwork: [
